--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,22 @@
   background-attachment: fixed;
   background-position: center;
 }
+@font-face {
+  font-family: 'nastaliq';
+  src: url('./font/IranNastaliq.ttf') format('ttf'),
+  url('./font/IranNastaliq.eot') format('eot'),
+  url('./font/IranNastaliq.otf') format('otf'),
+  url('./font/IranNastaliq.ttf') format('ttf'),
+  url('./font/IranNastaliq.woff') format('woff'),
+  url('./font/IranNastaliq.woff2') format('wpff2');
+
+
+  
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+.font-nastaliqh{
+font-family:'nastaliq';
+}
