--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,6 @@
   url('./font/IranNastaliq.ttf') format('ttf'),
   url('./font/IranNastaliq.woff') format('woff'),
   url('./font/IranNastaliq.woff2') format('wpff2');
-
-
-  
   font-weight: normal;
   font-style: normal;
 }
@@ -23,4 +20,42 @@
 
 .font-nastaliqh{
 font-family:'nastaliq';
+}
+
+.bg-photoASR{
+  background-image: url('../src/IMG/1.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  /* background-position: center; */
+}
+.bg-photoOCR{
+  background-image: url('../src/IMG/2.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  /* background-position: center; */
+}
+.bg-photoVAD{
+  background-image: url('../src/IMG/5.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  /* background-position: center; */
+}
+.bg-photoSE{
+  background-image: url('../src/IMG/4.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  /* background-position: center; */
+}
+.bg-photoSEGA{
+  background-image: url('../src/IMG/2.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  /* background-position: center; */
+}
+
+.bg-photoOCR{
+  background-image: url('../src/IMG/3.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  /* background-position: center; */
 }
